[tool.poetry]
name = "poethepoet-env-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
verbosity = -1

[tool.poe.env]
GLOBAL_POE_ROOT = "${POE_ROOT}"
GLOBAL_POE_PWD = "${POE_PWD}"

[tool.poe.tasks.my-task]
default_item_type = "cmd"
sequence = [
  "echo POE_ROOT=${POE_ROOT}",
  "echo GLOBAL_POE_ROOT=${GLOBAL_POE_ROOT}",
  "echo TASK_POE_ROOT=${TASK_POE_ROOT}",
  "echo POE_PWD=${POE_PWD}",
  "echo GLOBAL_POE_PWD=${GLOBAL_POE_PWD}",
  "echo TASK_POE_PWD=${TASK_POE_PWD}",
]

[tool.poe.tasks.my-task.env]
TASK_POE_ROOT = "${POE_ROOT}"
TASK_POE_PWD = "${POE_PWD}"
